add custom indexer example to doc page

--- a/docs/content/guides/developer/advanced/custom-indexer.mdx
+++ b/docs/content/guides/developer/advanced/custom-indexer.mdx
@@ -20,6 +20,7 @@ trait Worker: Send + Sync {
 
 In this example, the `CheckpointData` struct represents full checkpoint content. The struct contains checkpoint summary and contents, as well as detailed information about each individual transaction. The individual transaction data includes events and input/output objects. The full definition for this content is in the [full_checkpoint_content.rs](https://github.com/MystenLabs/sui/blob/releases/sui-graphql-rpc-v2024.1.0-release/crates/sui-types/src/full_checkpoint_content.rs) file of the `sui-types` crate.
 
+{@include: ../../../snippets//custom-indexer-source.mdx}
 
 ## Checkpoint stream sources
 
@@ -156,6 +157,8 @@ executor.register(worker_pool).await?;
 The data ingestion executor can run multiple workflows simultaneously. For each workflow, you need to create a separate worker pool and register it in the executor. The `WorkerPool` requires an instance of the `Worker` trait, the name of the workflow (which is used for tracking the progress of the flow in the progress store and metrics), and concurrency.
 
 The concurrency parameter specifies how many threads the workflow uses. Having a concurrency value greater than 1 is helpful when tasks are idempotent and can be processed in parallel and out of order. The executor only updates the progress/watermark to a certain checkpoint when all preceding checkpoints are processed.
+
+{@include: ../../../snippets//custom-indexer-source.mdx}
 
 Find more examples of custom ingestion pipelines in the Sui repository:
 * Sui data ingestion daemon that runs internal [pipelines](https://github.com/MystenLabs/sui/tree/main/crates/sui-data-ingestion/src/).
