--- a/docs/content/references/cli/move.mdx
+++ b/docs/content/references/cli/move.mdx
@@ -22,6 +22,7 @@ Commands:
   manage-package  Record addresses (Object IDs) for where this package is published on chain (this command sets variables in Move.lock)
   migrate         Migrate to Move 2024 for the package at `path`. If no path is provided defaults to current directory
   new             Create a new Move package with name `name` at `path`. If `path` is not provided the package will be created in the directory `name`
+  test     	  Run Move unit tests in this package
   help            Print this message or the help of the given subcommand(s)
 
 Options:
