--- a/docs/content/standards/wallet-standard.mdx
+++ b/docs/content/standards/wallet-standard.mdx
@@ -223,7 +223,7 @@ The return from this call (`availableWallets` in the previous code) is an array 
 
 Use the `Wallet.icon` and `Wallet.name` attributes to display the wallet details on your web page.
 
-The `Wallet.acounts` is an array of `WalletAcount`s. Each `WalletAccount` type has `address` and `publicKey` properties, which are most useful during development. This data fills and caches after connection.
+The `Wallet.accounts` is an array of `WalletAccount`s. Each `WalletAccount` type has `address` and `publicKey` properties, which are most useful during development. This data fills and caches after connection.
 
 ### Features
 
@@ -320,7 +320,7 @@ The callback is the handler that contains the logic to perform when the event fi
 {
     accounts: WalletAccount[],
     chains: IdentifierArray,
-    features: IndentiferRecord<unkown>
+    features: IndentifierRecord<unkown>
 }
 ```
 
